﻿Subtitle Edit Changelog

3.5.18 (xth November 2020) BETA
* NEW:
   * Add "Measurement converter" - thx OmrSi
   * Add waveform multi- track support - thx OmrSi
   * Add import/export of shortcuts
   * Add "Matroska chapter support" - thx OmrSi
   * Add subtitle format XMP - thx Tore
   * Add subtitle (json) - thx Lukas
   * Add "Center, left justify dialogs" to export images - thx Benjamin
   * Add two more extend shortcuts - thx OmrSi
   * Add "/renumber" option to command line - thx malashin
   * Add "Video - Open second subtitle" for mpv/vlc - thx m0ck69/Penney
* IMPROVED:
   * Update Bulgarian translation - thx KalinM
   * Update Hungarian translation - thx Zityi
   * Update Polish translation - thx admas
   * Update Chinese translation - thx nkh0472
   * Update Korean translation - thx domddol
   * Improve "Remove text for HI" support for 3-liners - thx Sam
   * Improve split with some handling of font tags - thx Peter
   * Change DirectShow and mpv settings to improve compatibility
   * Don't slow startup due to bad "RecentFiles" - thx beeeeswax/Geoff
   * Only omit known html tags in "CountCharacters" - thx Veronica
   * Add some Greek letters to "Normalize strings" - thx FeMaster1
   * Alignment dialog - focus button with current alignment
   * Improve ASSA/SSA preview - thx Mounter81
   * Add degree symbol to Unicode chars - thx René
   * Allow for .mpg/.mpeg transport stream file extension in "Batch convert"
   * Add some more EBU STL validation - thx Valentina
   * Improve Korean auto detect in PAC - thx andrewburnheimer
* FIXED:
   * Fix crash in export image with font tag - thx Jake
   * Fix batch convert of Blu-ray sup file to VobSub - thx John
   * Fix crash in faulty ts files - thx ExYuSubs
   * Fix libvlc load on Linux
   * Allow for very large images in "Image compare" / nOCR - thx chcip2003
   * Always close italic in EBU STL - thx Valentina
   * Fix for split original (minor) - thx René